# code-roast

./: README.md  pyproject.toml
.github/workflows/: nightly-agent.yml
docs/adr/: README.md
src/roast/: __init__.py  cli.py  engine.py
tests/: test_roast.py
