[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "code-roast"
version = "0.1.0"
description = "Paste any code and get it brutally but lovingly roasted by a senior engineer who has seen things"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.12"
authors = [{ name = "Brian Pelow", email = "brianpelow@github" }]
keywords = ["cli", "fun", "llm", "code-review", "developer-tools"]
dependencies = [
    "pydantic>=2.7.0",
    "rich>=13.7.0",
    "typer>=0.12.0",
    "openai>=1.30.0",
]

[project.scripts]
roast = "roast.cli:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/roast"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]